# nanocrew-sync

./: .gitignore  .npmrc  LICENSE  PHASES.md  README.md  RELEASING.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/.cargo/: config.toml
apps/desktop/src/: App.tsx  TitleBar.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/bundled/: download-winfsp.ps1  installer-hooks.nsh
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth.rs  cache.rs  credentials.rs  db.rs  dpapi.rs  error.rs  file_lock.rs  http_client.rs  lib.rs  license.rs  logging.rs  main.rs  mounts.rs  state.rs  throttle.rs  types.rs  winfsp_vfs.rs
apps/desktop/src-tauri/src/commands/: activity.rs  auth.rs  cache.rs  drives.rs  locks.rs  mod.rs  prefs.rs  system.rs
apps/desktop/src/context/: auth.tsx  transfers.tsx
apps/desktop/src/hooks/: useDriveNotifications.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/: en.json
apps/desktop/src/screens/: AccountScreen.tsx  ActivityScreen.tsx  AddDrivePickerScreen.tsx  AddDriveS3Screen.tsx  AddDriveWasabiScreen.tsx  DashboardScreen.tsx  ErrorScreen.tsx  FileBrowserScreen.tsx  LockScreen.tsx  OnboardingScreen.tsx  SettingsScreen.tsx  SetupScreen.tsx  TransfersScreen.tsx  UpdateButton.tsx
apps/desktop/src/styles/: global.css
