[package]
name = "nanocrew-sync"
version = "0.1.2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nanocrew_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build  = { version = "2", features = [] }
winfsp_build = "0.1.1"

[dependencies]
tauri       = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater         = "2"
tauri-plugin-process         = "2"
tauri-plugin-notification    = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }

# Database — bundled compiles SQLite in, no system dep
rusqlite    = { version = "0.31", features = ["bundled"] }

# Password hashing
argon2      = "0.5"

# Session tokens and drive IDs
uuid        = { version = "1", features = ["v4"] }

# Error handling
thiserror   = "1"

# Random for Argon2 salt generation
rand_core   = { version = "0.6", features = ["getrandom"] }

# S3 client (test_connection + VFS backend)
aws-config          = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3          = { version = "1" }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
# Custom HTTP client — lets us inject HTTPS proxy config + extra root CA
# certificates for corporate networks (Phase 7.3).
aws-smithy-http-client = { version = "1", features = ["default-client", "rustls-ring"] }
aws-smithy-runtime-api = { version = "1" }
url = "2"

# WinFsp — user-mode Windows filesystem driver. Replaces cloud-filter
# (see src-tauri.cloudfilter-backup-* for the previous implementation).
# Version pinned to match WinFsp 2.1.x installed alongside the app.
# `system` feature makes winfsp_init read HKLM\SOFTWARE\WOW6432Node\WinFsp
# InstallDir to locate winfsp-x64.dll, so users don't need the WinFsp bin
# directory on PATH.
winfsp       = { version = "0.12.4", features = ["system"] }
winfsp-sys   = { version = "0.12", features = ["system"] }

# Pipelined S3 range GETs during hydration
futures-util = "0.3"
bytes        = "1"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Wide-string types
widestring = "1"

# Windows API shims (security IDs, file handles, etc.)
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_Registry"] }

# SHA-256 for deriving sentinel-lock object names
sha2 = "0.10"

# AES-256-GCM for on-disk cache encryption (Phase 3.1). Derived key +
# random 12-byte nonce per block; 16-byte auth tag detects tampering.
aes-gcm = "0.10"

# Base64 for encoding DPAPI blobs in the SQLite credentials column.
base64 = "0.22"

# JWT verification for license key activation (Phase 9). RS256 (public-key
# verify only — signing happens in our license-server workflow).
jsonwebtoken = "9"

# Structured logging. Everything under the `nanocrew=` target flows through
# `tracing`; `tracing-appender` writes rolling daily files to %APPDATA%.
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender    = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
